--- a/package.json
+++ b/package.json
@@ -1,33 +1,53 @@
 {
-  "name": "ts-web-playground",
+  "name": "ts-webpack-babel-react",
   "version": "1.0.0",
-  "description": "Typescript Web Playground",
+  "description": "Typescript Webpack Babel React",
   "main": "src/main.ts",
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack",
+    "start": "cross-env NODE_ENV=development webpack serve --open",
+    "build": "cross-env NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "TypeScript",
-    "Playground",
+    "React",
+    "Babel",
     "Webpack"
   ],
   "author": "Hari Charan K.",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.11",
     "@types/webpack": "^4.41.25",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "prettier": "^2.2.1",
     "sass-loader": "^10.1.0",
-    "ts-loader": "^8.0.14",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "typescript": "^4.1.3",
     "webpack": "^5.12.2",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0"
   }
 }
