--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceRoot": "./src",
-    "sourceMap": true,
     "noImplicitAny": true,
-    "target": "es5",
-    "allowJs": true,
-    "lib": ["dom", "dom.iterable", "esnext"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": false,
     "downlevelIteration": true,
     "importHelpers": true,
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -20,6 +17,10 @@
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "include": ["src"]
 }
